syntax = "proto3";
package event_reward_player;
// option java_multiple_files = true;

// import "google/protobuf/struct.proto";

// ***** EventRewardPlayerObject Objects ***** //
message EventRewardPlayerObject {
  string id = 1;
  string agent_id = 2;
  string agent_prefix = 3;
  string player_username = 4;
  double balance = 5;
  string reward = 6;
  string type = 7;
  string currency = 8;
  string status = 9;
  string created_at = 10;
  string updated_at = 11;
}

message Options {
  repeated string relations = 1;
  repeated string select = 2;
  int32 skip = 3;
  int32 take = 4;
  map<string,string> order = 5;
  bool loadRelationIds = 6;
}

// ***** EventRewardPlayerObject Objects ***** //


// ***** EventRewardPlayerObject Status Response ***** //
message StatusResponse {
  bool successful = 1;
  int32 code = 2;
  string message = 3;
}
// ***** EventRewardPlayerObject Status Response ***** //

// ***** RequestResponse Insert ***** //
message InsertRequest {
  InsertRequestObject request = 1;
}

message InsertRequestObject {
    string agent_id = 1;
    string agent_prefix = 2;
    string player_username = 3;
    double balance = 4;
    string reward = 5;
    string type = 6;
    string currency = 7;
    string status = 8;
    string created_at = 9;
    string updated_at = 10;
}

message InsertResponse {
  InsertResponseObject response = 1;
}

message InsertResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
     DataInsertResponseObject data = 2;
  }
}

message DataInsertResponseObject {
  repeated DataRawInsertResponseObject raw = 1; 
}

message DataRawInsertResponseObject {
    string id = 1;
    string agent_id = 2;
    string agent_prefix = 3;
    string player_username = 4;
    double balance = 5;
    string reward = 6;
    string type = 7;
    string currency = 8;
    string status = 9;
    string created_at = 10;
    string updated_at = 11;
}

// ***** RequestResponse Insert ***** //

// ***** RequestResponse FindOne ***** //
message FindOneRequest {
  FindOneRequestObject request = 1;
}

message FindOneRequestObject{
  EventRewardPlayerObject where = 1;
  Options options = 2;
}

message FindOneResponse {
  FindOneResponseObject response = 1;
}

message FindOneResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
     EventRewardPlayerObject data = 2;
  }
}

// ***** RequestResponse FindOne ***** //

// ***** RequestResponse FindAll ***** //
message FindAllRequest {
  FindAllRequestObject request = 1;
}

message FindAllRequestObject{
  EventRewardPlayerObject where = 1;
  Options options = 2;
}

message FindAllResponse {
  FindAllResponseObject response = 1;
}

message FindAllResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
  }
  repeated EventRewardPlayerObject data = 2;
}

// ***** RequestResponse FindAll ***** //

// ***** RequestResponse FindAllWhere ***** //
message FindAllWhereRequest {
  string request = 1;
}

message FindAllWhereRequestObject{
  map<string,string> where = 1;
  FindOptions options = 2;
  repeated string args = 3;
}

message FindAllWhereResponse {
  FindAllWhereResponseObject response = 1;
}

message FindAllWhereResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
  }
  repeated EventRewardPlayerObject data = 2;
}

message FindOptions {
  repeated string relations = 1;
  repeated string select = 2;
  int32 skip = 3;
  int32 take = 4;
  map<string,string> order = 5;
}
// ***** RequestResponse FindAllWhere ***** //

// ***** RequestResponse Update ***** //
message UpdateRequest {
  EventRewardPlayerObject request = 1;
  EventRewardPlayerObject update = 2;
}

message UpdateResponse {
  UpdateResponseObject response = 1;
}

message UpdateResponseObject {
  oneof ResponseType 
  {
      StatusResponse status = 1;
      DataUpdateResponseObject data = 2;
  }
}

message DataUpdateResponseObject {
  int32 affected = 1;
  repeated DataRawUpdateResponseObject raw = 2;
}

message DataRawUpdateResponseObject {
    string id = 1;
    string agent_id = 2;
    string agent_prefix = 3;
    string player_username = 4;
    double balance = 5;
    string reward = 6;
    string type = 7;
    string currency = 8;
    string status = 9;
    string created_at = 10;
    string updated_at = 11;
}
// ***** RequestResponse Update ***** //

// ***** RequestResponse Delete ***** //
message DeleteRequest {
  EventRewardPlayerObject request = 1;
}

message DeleteObject {
  string id = 1;
}

message DeleteResponse {
  DeleteResponseObject response = 1;
}

message DeleteResponseObject {
  oneof ResponseType 
  {
      StatusResponse status = 1;
      DataDeleteResponseObject data = 2;
  }
}

message DataDeleteResponseObject {
  int32 affected = 1;
  repeated DataRawDeleteResponseObject raw = 2;
}

message DataRawDeleteResponseObject {
    string id = 1;
    string agent_id = 2;
    string agent_prefix = 3;
    string player_username = 4;
    double balance = 5;
    string reward = 6;
    string type = 7;
    string currency = 8;
    string status = 9;
    string created_at = 10;
    string updated_at = 11;
}
// ***** RequestResponse Delete ***** //


// ***** RequestResponse Count ***** //
message CountRequest {
  CountRequestObject request = 1;
}

message CountRequestObject {
  EventRewardPlayerObject where = 1;
}

message CountResponse {
  CountResponseObject response = 1;
}

message CountResponseObject {
  oneof ResponseType 
  {
    StatusResponse status = 1;
    DataCountResponseObject data = 2;
  }
}

message DataCountResponseObject {
  int32 count = 1;
}
// ***** RequestResponse Count ***** //

// ***** RequestResponse CountAllWhere ***** //
message CountAllWhereRequest {
  string request = 1;
}

message CountAllWhereRequestObject {
  EventRewardPlayerObject where = 1;
  Options options = 2;
  repeated string args = 3;
}

message CountAllWhereResponse {
  CountAllWhereResponseObject response = 1;
}

message CountAllWhereResponseObject {
  oneof ResponseType 
  {
    StatusResponse status = 1;
    DataCountAllWhereResponseObject data = 2;
  }
}

message DataCountAllWhereResponseObject {
  int32 count = 1;
}

message CountOptions {
  repeated string relations = 1;
  repeated string select = 2;
  int32 skip = 3;
  int32 take = 4;
  map<string,string> order = 5;
}
// ***** RequestResponse CountAllWhere ***** //


// ***** Increment ***** //
message IncrementRequest {
  IncrementOptionsQueryRequest request = 1;
  IncrementOptionsKeyRequest key = 2;
}

message IncrementOptionsKeyRequest {
  string key = 1;
  double balance = 2;
}

message IncrementOptionsQueryRequest {
    string id = 1;
    string agent_id = 2;
    string agent_prefix = 3;
    string player_username = 4;
    string currency = 5;
    string type = 6;
}

message CustomIncrementResponse {
  oneof ResponseType 
  {
     StatusResponse status = 1;
     DataIncrementResponse data = 2;
  }
}

message IncrementResponse {
  CustomIncrementResponse response = 1;
}

message CustomDataIncrementResponse{
  string id = 1;
  string agent_id = 2;
  string agent_prefix = 3;
  string player_username = 4;
  double balance = 5;
  string currency = 6;
  string type = 7;
}

message DataIncrementResponse{
  repeated CustomDataIncrementResponse raw = 1; 
}
// ***** Increment ***** //

// ***** RequestResponse Query ***** //
message QueryRequest {
  string request = 1;
}

message QueryResponse {
  string response = 1;
}
// ***** RequestResponse Query ***** //


service EventRewardPlayerService {
  rpc Insert (InsertRequest) returns (InsertResponse) {}
  rpc FindOne (FindOneRequest) returns (FindOneResponse) {}
  rpc FindAll (FindAllRequest) returns (FindAllResponse) {}
  rpc FindAllWhere (FindAllWhereRequest) returns (FindAllWhereResponse) {}
  rpc Update (UpdateRequest) returns (UpdateResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
  rpc Count (CountRequest) returns (CountResponse) {}
  rpc CountAllWhere (CountAllWhereRequest) returns (CountAllWhereResponse) {}
  rpc Increment (IncrementRequest) returns (IncrementResponse) {}
  rpc Query (QueryRequest) returns (QueryResponse) {}
}

